--- a/ZeusBowling/Config/DefaultEngine.ini
+++ b/ZeusBowling/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=ZeusBowling
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap
+EditorStartupMap=/Game/Maps/BowlingAlleyMap.BowlingAlleyMap
+GameDefaultMap=/Game/Maps/BowlingAlleyMap.BowlingAlleyMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
+GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/BowlingGameMode.BowlingGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/NavigationSystem.RecastNavMesh]
